k8/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: todo
spec:
  selector: { app: todo-app }
  ports: [{ port: 80, targetPort: 5000 }]
  type: ClusterIP
