k8/mysql-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: todo
spec:
  ports:
    - port: 3306
      name: mysql
  clusterIP: None
  selector:
    app: mysql
